--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -22,7 +22,6 @@
      "text": [
       "[WDM] - Current google-chrome version is 87.0.4280\n",
       "[WDM] - Get LATEST driver version for 87.0.4280\n",
-      "[WDM] - There is no [mac64] chromedriver for browser 87.0.4280 in cache\n",
       "[WDM] - Get LATEST driver version for 87.0.4280\n",
       "[WDM] - Trying to download new driver from http://chromedriver.storage.googleapis.com/87.0.4280.88/chromedriver_mac64.zip\n"
      ]
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -119,6 +118,7 @@
     "tag_box = html_soup.find('div', class_='tags-box')\n",
     "# tag_box\n",
     "tags = tag_box.find_all('a', class_='tag')\n",
+    "#tags = tag_box.find_all('a')\n",
     "\n",
     "for tag in tags:\n",
     "    word = tag.text\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
